Add new methods in Shelter and tests in ShelterTest for them, add JUnit 5.10.2 and AssertJ 3.25.3 dependencies in pom.xml